[package]
name = "http-server-rocket-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }